# student_and_score_fastapi_sqlalchemy

./: README.md  app.py  dtos.py  main.py  models.py  pyproject.toml  service.py  students.db  test_score.http  test_student.http
